--- a/MiniProject/BOOTSHOP/appsettings.json
+++ b/MiniProject/BOOTSHOP/appsettings.json
@@ -1,4 +1,8 @@
 {
+  //Adding connection string for the database
+  "ConnectionStrings": {
+    "BootShopConnection": "Server=4TS\\SQLEXPRESS;Database=BOOTSHOP; Integrated Security = true; MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
