--- a/MiniProject/MyApp/appsettings.json
+++ b/MiniProject/MyApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=4TS\\SQLEXPRESS;Initial Catalog=myapp_database;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+  }
 }
