--- a/MiniProject/WebApplication1/WebApplication1/appsettings.json
+++ b/MiniProject/WebApplication1/WebApplication1/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=4TS\\SQLEXPRESS;Database=SCHOOL; Integrated Security = true; MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
+
 }
